# InstanceGuard

./: .gitignore  LICENSE  README.md
Source/: CMakeLists.txt  InstanceGuard.cpp  InstanceGuard.hpp  config.h
